tests/cases/parser/types/incomplete_tuple_literal_type_annotation.hash
// run=fail, stage=parse

k : (str, bar: u8) -> u32 = (k: );
